Fixed mobile header jumpiness on scroll

--- a/wp-content/themes/mag-wp/css/colors/default.css
+++ b/wp-content/themes/mag-wp/css/colors/default.css
@@ -716,6 +716,7 @@ div.big-thing-box {
 	margin: 0 auto;
 	float: none;
 	width: 70%;
+	height: 484px;
 }
 .line-box                       { 
 	margin-top: 50px;  
@@ -1408,8 +1409,8 @@ div#click-menu {
 		width: 50%;
 	}
 
-	header div.sticky div#featured-boxes {
-    	margin: 0;
+	body.sticky div#featured-boxes {
+    	margin: 45px 0 0;
 	}
 	#featured-boxes .wrap-center {
 		width: 100%;
@@ -1527,8 +1528,8 @@ div#click-menu {
 	#searchform .inputUnderline, #searchform .animatedUnderline {
 		width: 50%;
 	}
-	header div.sticky div#featured-boxes {
-    	margin: 0;
+	body.sticky div#featured-boxes {
+    	margin: 45px 0 0;
 	}
 	#featured-boxes .wrap-center {
 		width: 100%;
@@ -1646,8 +1647,8 @@ div#click-menu {
 	#searchform .inputUnderline, #searchform .animatedUnderline {
 		width: 50%;
 	}
-	header div.sticky div#featured-boxes {
-    	margin: 0;
+	body.sticky div#featured-boxes {
+    	margin: 45px 0 0;
 	}
 	#featured-boxes .wrap-center {
 		width: 100%;
@@ -1764,14 +1765,15 @@ div#click-menu {
 	#searchform .inputUnderline, #searchform .animatedUnderline {
 		width: 50%;
 	}
-	header div.sticky div#featured-boxes {
-    	margin: 0;
+	body.sticky div#featured-boxes {
+    	margin: 45px 0 0;
 	}
 	#featured-boxes .wrap-center {
 		width: 100%;
 	}
 	#featured-boxes div.big-thing-box {
 		width: 100%;
+		height: 328px;
 	}
 	#featured-boxes .header_line h4.top span.gray {
 		padding: 10px 23px;
